--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,12 +20,9 @@
 
 title: Mantenimiento Preventivo
 email: lasillera74@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Descripción del Módulo de Mantenimiento Preventivo en Odoo.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "isabelmartiromeu.github.io/mantenprev/docs" # the base hostname & protocol for your site, e.g. http://example.com
+url: "isabelmartiromeu.github.io/mantenprev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
