añado https en _config.yml

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Mantenimiento Preventivo
 email: lasillera74@gmail.com
 description: Descripción del Módulo de Mantenimiento Preventivo en Odoo.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "isabelmartiromeu.github.io/mantenprev" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://isabelmartiromeu.github.io/mantenprev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
