--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,10 +21,9 @@
 title: Mantenimiento Preventivo
 email: lasillera74@gmail.com
 description: Descripción del Módulo de Mantenimiento Preventivo en Odoo.
-baseurl: "/mantenprev" # the subpath of your site, e.g. /blog
-url: "https://isabelmartiromeu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://isabelmartiromeu.github.io/mantenprev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 #theme: minima
